@@ -1,6 +1,6 @@
 Package: clustMixType
-Version: 0.2-8
-Date: 2020-11-02
+Version: 0.2-9
+Date: 2020-11-03
 Title: k-Prototypes Clustering for Mixed Variable-Type Data
 Author: Gero Szepannek [aut, cre], Rabea Aschenbruck [aut]
 Maintainer: Gero Szepannek <gero.szepannek@web.de>
